Bug 281459 - Can't select Factor in New Investment Wizard
Summary: Can't select Factor in New Investment Wizard
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-06 09:11 UTC by David Houlden
Modified: 2012-12-26 13:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2011-09-06 09:11:54 UTC
Version:           SVN trunk (using KDE 4.5.5) 
OS:                Linux

I am adding a new investment (mutual fund) to an existing investment account. When I get to the screen to select an online source, I select Financial Express but the Factor field is greyed out and I can't change it. I have to complete the wizard then go back in a second time to amend the factor. 

Reproducible: Always

Steps to Reproduce:
As described above.


Expected Results:  
Factor field should not be greyed out after selecting an online source.
Comment 1 Thomas Baumgart 2012-12-23 22:42:39 UTC
*** Bug 312127 has been marked as a duplicate of this bug. ***
Comment 2 Thomas Baumgart 2012-12-26 13:42:05 UTC
Git commit 328fc707b2a259367ac1a13a0987c39393ad6a2e by Thomas Baumgart.
Committed on 26/12/2012 at 14:40.
Pushed by tbaumgart into branch 'master'.

Enable factor widget when online source is selected

M  +1    -0    kmymoney/wizards/newinvestmentwizard/konlineupdatewizardpage.cpp

http://commits.kde.org/kmymoney/328fc707b2a259367ac1a13a0987c39393ad6a2e
Comment 3 Thomas Baumgart 2012-12-26 13:42:51 UTC
Git commit cdfa269352a4230f2b10ca98c9374f666065a868 by Thomas Baumgart.
Committed on 26/12/2012 at 14:40.
Pushed by tbaumgart into branch '4.6'.

Enable factor widget when online source is selected
(cherry picked from commit 328fc707b2a259367ac1a13a0987c39393ad6a2e)

M  +1    -0    kmymoney/wizards/newinvestmentwizard/konlineupdatewizardpage.cpp

http://commits.kde.org/kmymoney/cdfa269352a4230f2b10ca98c9374f666065a868