Enable factor widget when online source is selected

BUG: 281459
(cherry picked from commit 328fc707b2a259367ac1a13a0987c39393ad6a2e)